adjust Sort fea
