# StudentPortal.API/Controllers/SemestersController.cs
@@ -34,8 +34,7 @@ public class SemestersController : ControllerBase
             Page = request.Page,
             PageSize = request.PageSize,
             Search = request.Search,
-            SortBy = request.SortBy,
-            SortDescending = request.SortDescending,
+            Sort = request.Sort,
             Select = request.Select,
             Expand = request.Expand
         };
